--- a/client/main.css
+++ b/client/main.css
@@ -28,7 +28,9 @@ body,html {
     transition: all 2s ease-in-out;
 }
 
-.thumbnail:hover { transform: scale(3.1); }
+.thumbnail:hover {
+    transform: scale(3) translateY(calc(10vh)) translateX(calc(20vh - 250px));
+}
 
 .thumbnails {
     display: flex;
