Revert "Make quote and semicolon use consistent."
This reverts commit 4eb23d174e48342ea1b76d73298b556faaf8d51b.

--- a/client/main.css
+++ b/client/main.css
@@ -60,15 +60,15 @@ body,html {
     justify-content: space-evenly;
 }
 .drumkit {
-    background: url("assets/thumbnails/drumkit_thumbnail.png");
+    background: url('assets/thumbnails/drumkit_thumbnail.png');
     background-size: cover;
 }
 .clock {
-    background: url("assets/thumbnails/clock_thumbnail.png");
+    background: url('assets/thumbnails/clock_thumbnail.png');
     background-size: cover;
 }
 .css-variables {
-    background: url("assets/thumbnails/css_variables_thumbnail.png");
+    background: url('assets/thumbnails/css_variables_thumbnail.png');
     background-size: cover;
 }
 .keys {
