--- a/client/main.css
+++ b/client/main.css
@@ -41,8 +41,14 @@ body,html {
   from, to { border-color: transparent }
   50% { border-color: orange }
 }
+.thumbnails {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
 
 .thumbnail {
+    flex: 1;
     width: 30rem;
     height: 20rem;
     margin: auto;
@@ -54,11 +60,6 @@ body,html {
     transform: scale(3) translateY(calc(10vh)) translateX(calc(20vh));
 }
 
-.thumbnails {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
 .drumkit {
     background: url('assets/thumbnails/drumkit_thumbnail.png');
     background-size: cover;
@@ -69,6 +70,14 @@ body,html {
 }
 .css-variables {
     background: url('assets/thumbnails/css_variables_thumbnail.png');
+    background-size: cover;
+}
+.flex-displays {
+    background: url('assets/thumbnails/flex_displays_thumbnail.png');
+    background-size: cover;
+}
+.draw-pad {
+    background: url('assets/thumbnails/draw_pad_thumbnail.png');
     background-size: cover;
 }
 .keys {
